--- a/wwwdj/templates/pages/staff/dashboard.html
+++ b/wwwdj/templates/pages/staff/dashboard.html
@@ -121,8 +121,12 @@ Staff Panel | Vidicode Timesheets
             <input type="text" name="last_name" id="last-name" class="form-control bg-dark text-white" required>
           </div>
           <div class="mb-1">
-            <label for="hour-rate" class="col-form-label">Hour Rate:</label>
-            <input type="number" name="hour_rate" id="hour-rate" min="1" value="10" step="0.5" class="form-control bg-dark text-white" required>
+            <label for="hour-rate" class="col-form-label">Payable Hour Rate:</label>
+            <input type="number" name="payable_hour_rate" id="hour-rate" value="{{ current_worker.payable_hour_rate }}" min="1" value="10" step="0.5" class="form-control bg-dark text-white" required>
+          </div>
+          <div class="mb-1">
+            <label for="hour-rate" class="col-form-label">Billable Hour Rate:</label>
+            <input type="number" name="billable_hour_rate" id="hour-rate" value="{{ current_worker.billable_hour_rate }}" min="1" value="10" step="0.5" class="form-control bg-dark text-white" required>
           </div>
           <div class="mb-3">
             <label for="password" class="col-form-label">Password:</label>
