--- a/wwwdj/templates/pages/staff/worker_timesheet.html
+++ b/wwwdj/templates/pages/staff/worker_timesheet.html
@@ -32,8 +32,12 @@
             <input type="text" name="last_name" id="last-name" value="{{ current_worker.last_name }}" class="form-control bg-dark text-white" required>
           </div>
           <div class="mb-1">
-            <label for="hour-rate" class="col-form-label">Hour Rate:</label>
-            <input type="number" name="hour_rate" id="hour-rate" value="{{ current_worker.hour_rate }}" min="1" value="10" step="0.5" class="form-control bg-dark text-white" required>
+            <label for="hour-rate" class="col-form-label">Payable Hour Rate:</label>
+            <input type="number" name="payable_hour_rate" id="hour-rate" value="{{ current_worker.payable_hour_rate }}" min="1" value="10" step="0.5" class="form-control bg-dark text-white" required>
+          </div>
+          <div class="mb-1">
+            <label for="hour-rate" class="col-form-label">Billable Hour Rate:</label>
+            <input type="number" name="billable_hour_rate" id="hour-rate" value="{{ current_worker.billable_hour_rate }}" min="1" value="10" step="0.5" class="form-control bg-dark text-white" required>
           </div>
           <div class="mb-3">
             <label for="password" class="col-form-label">Password:</label>
@@ -84,8 +88,9 @@
       <th scope="col" style="width: 8%;">Start Time</th>
       <th scope="col" style="width: 8%;">Finish Time</th>
       <th scope="col" style="width: 9%;">Total Hours</th>
-      <th scope="col" style="width: 7%;">Earnings</th>
-      <th scope="col" style="width: 23%;">Work Summary</th>
+      <th scope="col" style="width: 3.5%;">Payable</th>
+      <th scope="col" style="width: 3.5%;">Billable</th>
+      <th scope="col" style="width: 15%;">Work Summary</th>
       <th scope="col" class="text-center" style="width: 8%;">Actions</th>
     </tr>
   </thead>
@@ -119,6 +124,7 @@
       </td>
       <td>{{ workday.2 }}</td>
       <td>${{ workday.3 }}</td>
+      <td>${{ workday.4 }}</td>
       <td>
         {% for record in workday.1 %}
         {% if record.summary %}
@@ -175,8 +181,9 @@
       <th scope="col" style="width: 8%;">Start Time</th>
       <th scope="col" style="width: 8%;">Finish Time</th>
       <th scope="col" style="width: 9%;">Total Hours</th>
-      <th scope="col" style="width: 7%;">Earnings</th>
-      <th scope="col" style="width: 23%;">Work Summary</th>
+      <th scope="col" style="width: 3,5%;">Payable</th>
+      <th scope="col" style="width: 3,5%;">Billable</th>
+      <th scope="col" style="width: 15%;">Work Summary</th>
       <th scope="col" class="text-center" style="width: 8%;">Actions</th>
     </tr>
   </thead>
@@ -210,6 +217,7 @@
       </td>
       <td>{{ workday.2 }}</td>
       <td>${{ workday.3 }}</td>
+      <td>${{ workday.4 }}</td>
       <td>
         {% for record in workday.1 %}
         {% if record.summary %}
@@ -266,7 +274,8 @@
     <h5>{{ total_hours }} hours</h5>
   </div>
   <div class="col-auto">
-    <h5>${{ total_earnings }}</h5>
+    <h5>Payable: ${{ total_payable_earnings }}</h5>
+    <h5>Billable: ${{ total_billable_earnings }}</h5>
   </div>
 </div>
 {% endblock %}
