fix payable and billable display on staff totals page

--- a/wwwdj/templates/pages/staff/totals.html
+++ b/wwwdj/templates/pages/staff/totals.html
@@ -47,7 +47,8 @@
       <h6>{{ value.meta.total_hours }} hours</h6>
     </div>
     <div class="col-auto">
-      <h6>${{ value.meta.total_earnings }}</h6>
+      <h6>Payable: ${{ value.meta.total_payable_earnings }}</h6>
+      <h6>Billable: ${{ value.meta.total_billable_earnings }}</h6>
     </div>
   </div>
 </div>
