--- a/wwwdj/templates/pages/staff/projects.html
+++ b/wwwdj/templates/pages/staff/projects.html
@@ -75,7 +75,7 @@
           </div>
           <div class="mb-1">
             <label for="billable_rate" class="col-form-label">Billable Rate:</label>
-            <input type="number" name="billable_rate" id="billable_rate" min="0" value="0" step="0.5" class="form-control bg-dark text-white" required>
+            <input type="number" name="billable_rate" id="billable_rate" min="0" value="{{ project.billable_rate }}" step="0.5" class="form-control bg-dark text-white" required>
           </div>
         </div>
         <div class="modal-footer">
