--- a/wwwdj/templates/pages/staff/projects.html
+++ b/wwwdj/templates/pages/staff/projects.html
@@ -131,7 +131,7 @@
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content bg-dark">
       <div class="modal-header">
-        <h5 class="modal-title" id="recalculateRecordsModalLabel_{{ rate.pk }}">Confirm records recalculation?</h5>
+        <h5 class="modal-title" id="recalculateRecordsModalLabel_{{ project.pk }}">Confirm records recalculation?</h5>
       </div>
       <div class="modal-body">
         After your confirmation all records for {{ project.name }} in
@@ -139,7 +139,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
-        <a href="{% url 'recalculate_records' session.pk project.pk %}" class="btn btn-success">Confirm</a>
+        <a href="{% url 'recalculate_project_records' session.pk project.pk %}" class="btn btn-success">Confirm</a>
       </div>
     </div>
   </div>
